--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,16 @@
     "description": "dcat admin",
     "type": "library",
     "keywords": ["dcat", "laravel", "admin", "grid", "form", "laravel admin"],
-    "homepage": "https://github.com/jqhph/dcat-admin",
+    "homepage": "https://github.com/w5303285/dcat-admin.git",
     "license": "MIT",
     "authors": [
         {
-            "name": "jqh",
-            "email": "841324345@qq.com"
+            "name": "baoshi",
+            "email": "120907037@qq.com"
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": "^8.0",
         "symfony/dom-crawler": "~3.1|~4.0|~5.0",
         "laravel/framework": "~5.5|~6.0|~7.0|~8.0|~9.0",
         "doctrine/dbal": "2.*",
